exports[`Objectschema Editor > changes customAspect name, attribute names, description and types #0`] =
{
  "testSchema_Aspekt1Test_Attribut1Test": {
    "type": "string"
  },
  "testSchema_Aspekt1Test_Attribut2Test": {
    "type": "boolean"
  },
  "testSchema_Aspekt1Test_Attribut3": {
    "format": "date-time",
    "type": "string"
  }
};

exports[`Objectschema Editor > removes and adds aspect attributes #0`] =
{
  "testSchema_Aspekt1_a": {
    "type": "string"
  },
  "testSchema_Aspekt1_b": {
    "type": "boolean"
  },
  "testSchema_Aspekt1_c": {
    "type": "number"
  },
  "testSchema_Aspekt1_d": {
    "type": "integer"
  },
  "testSchema_Aspekt1_e": {
    "enum": [
      "a",
      "b",
      "c",
      "d"
    ]
  },
  "testSchema_Aspekt1_f": {
    "items": {
      "enum": [
        "a",
        "b",
        "c",
        "d"
      ]
    },
    "type": "array"
  }
};

exports[`Objectschema Editor > adds completely new aspect and removes it from dialog with delete button #0`] =
{
  "testSchema_TestAspectTwo_a": {
    "type": "string"
  }
};

exports[`Objectschema Editor > changes link name, attribute names, description and types #0`] =
{
  "properties": {
    "subType": {
      "enum": [
        "AST_Datatype"
      ]
    },
    "targetUri": {
      "title": "The id of the target object.",
      "type": "string"
    },
    "type": {
      "enum": [
        "asset"
      ]
    }
  },
  "required": [
    "targetUri"
  ],
  "type": "object"
};

exports[`Objectschema Editor > changes link name, attribute names, description and types #1`] =
{
  "testSchema_Link1Test_Attribut1Test": {
    "format": "uri",
    "pattern": "^(https?|ftp)://",
    "type": "string"
  },
  "testSchema_Link1Test_Attribut2Test": {
    "type": "boolean"
  }
};

exports[`Objectschema Editor > removes and adds link attributes #0`] =
{
  "testSchema_Link1_a": {
    "type": "string"
  },
  "testSchema_Link1_b": {
    "type": "boolean"
  },
  "testSchema_Link1_c": {
    "type": "number"
  },
  "testSchema_Link1_d": {
    "type": "integer"
  },
  "testSchema_Link1_e": {
    "enum": [
      "a",
      "b",
      "c",
      "d"
    ]
  },
  "testSchema_Link1_f": {
    "items": {
      "enum": [
        "a",
        "b",
        "c",
        "d"
      ]
    },
    "type": "array"
  }
};

exports[`Objectschema Editor > adds completely new link and removes it from dialog with delete button #0`] =
{
  "testSchema_TestLinkTwo_a": {
    "type": "string"
  }
};

exports[`Objectschema Editor > compares downloaded schema with the actual one #0`] =
{
  "$schema": "https://json-schema.org/draft/2019-09/schema",
  "description": "NBRX Integration Test Schema v1.0 2021-05-21",
  "properties": {
    "abbreviation": {
      "description": "The abbreviation for the EntityLayerSupertype.",
      "type": "string"
    },
    "createdAt": {
      "description": "A timestamp acc. to RFC 3339 specifying when this entity was created.",
      "type": "string"
    },
    "createdBy": {
      "description": "The username of the user who created this object.",
      "type": "string"
    },
    "customAspects": {
      "description": "A custom property which is determined by the requested entity schema - see '/schemas'",
      "properties": {
        "testSchema_Aspekt1": {
          "additionalProperties": false,
          "properties": {
            "attributes": {
              "additionalProperties": false,
              "properties": {
                "testSchema_Aspekt1_Attribut1": {
                  "type": "string"
                },
                "testSchema_Aspekt1_Attribut2": {
                  "format": "uri",
                  "pattern": "^(https?|ftp)://",
                  "type": "string"
                },
                "testSchema_Aspekt1_Attribut3": {
                  "format": "date-time",
                  "type": "string"
                }
              },
              "type": "object"
            },
            "domains": {
              "description": "The ids of elements of the type domain.",
              "items": {
                "properties": {
                  "displayName": {
                    "description": "A friendly human readable title of the referenced domain.",
                    "type": "string"
                  },
                  "targetUri": {
                    "description": "The resource URL of the referenced domain.",
                    "type": "string"
                  }
                },
                "required": [
                  "targetUri"
                ],
                "type": "object"
              },
              "title": "The list of domains in which this element is present.",
              "type": "array",
              "uniqueItems": true
            },
            "id": {
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}",
              "title": "The UUID to identify the element",
              "type": "string"
            },
            "references": {
              "items": {
                "properties": {
                  "displayName": {
                    "description": "A friendly human readable title of the referenced object.",
                    "type": "string"
                  },
                  "targetUri": {
                    "description": "The resource URL of the referenced object.",
                    "type": "string"
                  }
                },
                "required": [
                  "targetUri"
                ],
                "type": "object"
              },
              "type": "array"
            }
          },
          "type": "object"
        },
        "testSchema_Aspekt2": {
          "additionalProperties": false,
          "properties": {
            "attributes": {
              "additionalProperties": false,
              "properties": {
                "testSchema_Aspekt2_Attribut1": {
                  "type": "boolean"
                },
                "testSchema_Aspekt2_Attribut2": {
                  "type": "number"
                },
                "testSchema_Aspekt2_Attribut3": {
                  "type": "integer"
                }
              },
              "type": "object"
            },
            "domains": {
              "description": "The ids of elements of the type domain.",
              "items": {
                "properties": {
                  "displayName": {
                    "description": "A friendly human readable title of the referenced domain.",
                    "type": "string"
                  },
                  "targetUri": {
                    "description": "The resource URL of the referenced domain.",
                    "type": "string"
                  }
                },
                "required": [
                  "targetUri"
                ],
                "type": "object"
              },
              "title": "The list of domains in which this element is present.",
              "type": "array",
              "uniqueItems": true
            },
            "id": {
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}",
              "title": "The UUID to identify the element",
              "type": "string"
            },
            "references": {
              "items": {
                "properties": {
                  "displayName": {
                    "description": "A friendly human readable title of the referenced object.",
                    "type": "string"
                  },
                  "targetUri": {
                    "description": "The resource URL of the referenced object.",
                    "type": "string"
                  }
                },
                "required": [
                  "targetUri"
                ],
                "type": "object"
              },
              "type": "array"
            }
          },
          "type": "object"
        },
        "testSchema_Aspekt3": {
          "additionalProperties": false,
          "properties": {
            "attributes": {
              "additionalProperties": false,
              "properties": {
                "testSchema_Aspekt3_Attribut1": {
                  "enum": [
                    "a",
                    "b",
                    "c",
                    "d",
                    "e"
                  ]
                },
                "testSchema_Aspekt3_Attribut2": {
                  "items": {
                    "enum": [
                      "a",
                      "b",
                      "c",
                      "d",
                      "e"
                    ]
                  },
                  "type": "array"
                }
              },
              "type": "object"
            },
            "domains": {
              "description": "The ids of elements of the type domain.",
              "items": {
                "properties": {
                  "displayName": {
                    "description": "A friendly human readable title of the referenced domain.",
                    "type": "string"
                  },
                  "targetUri": {
                    "description": "The resource URL of the referenced domain.",
                    "type": "string"
                  }
                },
                "required": [
                  "targetUri"
                ],
                "type": "object"
              },
              "title": "The list of domains in which this element is present.",
              "type": "array",
              "uniqueItems": true
            },
            "id": {
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}",
              "title": "The UUID to identify the element",
              "type": "string"
            },
            "references": {
              "items": {
                "properties": {
                  "displayName": {
                    "description": "A friendly human readable title of the referenced object.",
                    "type": "string"
                  },
                  "targetUri": {
                    "description": "The resource URL of the referenced object.",
                    "type": "string"
                  }
                },
                "required": [
                  "targetUri"
                ],
                "type": "object"
              },
              "type": "array"
            }
          },
          "type": "object"
        }
      },
      "title": "CustomAspect",
      "type": "object"
    },
    "description": {
      "description": "The description for the EntityLayerSupertype.",
      "type": "string"
    },
    "domains": {
      "items": {
        "description": "The domains this entity is being used in.",
        "properties": {
          "displayName": {
            "description": "A friendly human readable title of the referenced domain.",
            "type": "string"
          },
          "resourcesUri": {
            "type": "string"
          },
          "searchesUri": {
            "type": "string"
          },
          "targetUri": {
            "description": "The resource URL of the referenced domain.",
            "type": "string"
          }
        },
        "required": [
          "targetUri"
        ],
        "type": "object"
      },
      "type": "array"
    },
    "id": {
      "description": "ID must be a valid UUID string following RFC 4122.",
      "type": "string"
    },
    "links": {
      "description": "Custom relations which do not affect the behavior.",
      "properties": {
        "testSchema_Link1": {
          "items": {
            "additionalProperties": false,
            "properties": {
              "attributes": {
                "additionalProperties": false,
                "properties": {
                  "testSchema_Link1_Attribut1": {
                    "format": "uri",
                    "pattern": "^(https?|ftp)://",
                    "type": "string"
                  },
                  "testSchema_Link1_Attribut2": {
                    "enum": [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5"
                    ]
                  }
                },
                "type": "object"
              },
              "domains": {
                "description": "The ids of elements of the type domain.",
                "items": {
                  "properties": {
                    "displayName": {
                      "description": "A friendly human readable title of the referenced domain.",
                      "type": "string"
                    },
                    "targetUri": {
                      "description": "The resource URL of the referenced domain.",
                      "type": "string"
                    }
                  },
                  "required": [
                    "targetUri"
                  ],
                  "type": "object"
                },
                "title": "The list of domains in which this element is present.",
                "type": "array",
                "uniqueItems": true
              },
              "id": {
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}",
                "title": "The UUID to identify the element",
                "type": "string"
              },
              "references": {
                "items": {
                  "properties": {
                    "displayName": {
                      "description": "A friendly human readable title of the referenced object.",
                      "type": "string"
                    },
                    "targetUri": {
                      "description": "The resource URL of the referenced object.",
                      "type": "string"
                    }
                  },
                  "required": [
                    "targetUri"
                  ],
                  "type": "object"
                },
                "type": "array"
              },
              "target": {
                "properties": {
                  "subType": {
                    "enum": [
                      null
                    ]
                  },
                  "targetUri": {
                    "title": "The id of the target object.",
                    "type": "string"
                  },
                  "type": {
                    "enum": [
                      "scope"
                    ]
                  }
                },
                "required": [
                  "targetUri"
                ],
                "type": "object"
              }
            },
            "required": [
              "target"
            ],
            "type": "object"
          },
          "type": "array"
        }
      },
      "title": "CustomLink",
      "type": "object"
    },
    "name": {
      "description": "The name for the EntityLayerSupertype.",
      "type": "string"
    },
    "owner": {
      "description": "A reference to the unit containing this entity.",
      "properties": {
        "displayName": {
          "description": "A friendly human readable title of the referenced unit.",
          "type": "string"
        },
        "resourcesUri": {
          "description": "URI the owner can get accessed by.",
          "type": "string"
        },
        "searchesUri": {
          "description": "URI the owner can get searched by",
          "type": "string"
        },
        "targetUri": {
          "description": "The resource URL of the referenced unit.",
          "type": "string"
        }
      },
      "required": [
        "targetUri"
      ],
      "type": "object"
    },
    "parts": {
      "items": {
        "description": "A reference to an entity's part",
        "properties": {
          "displayName": {
            "description": "A friendly human readable title of the referenced entity.",
            "type": "string"
          },
          "resourcesUri": {
            "type": "string"
          },
          "searchesUri": {
            "type": "string"
          },
          "targetUri": {
            "description": "The resource URL of the referenced entity.",
            "type": "string"
          }
        },
        "required": [
          "targetUri"
        ],
        "type": "object"
      },
      "type": "array"
    },
    "subType": {
      "description": "The sub type this entity has in each domain. Domain ID is key, sub type is value.",
      "title": "SubType",
      "type": "object"
    },
    "translations": {
      "de": {
        "1": "1",
        "2": "2",
        "3": "3",
        "4": "4",
        "5": "5",
        "a": "a",
        "b": "b",
        "c": "c",
        "d": "d",
        "e": "e",
        "testSchema_Aspekt1_Attribut1": "Attribut 1 Beschreibung Text DE",
        "testSchema_Aspekt1_Attribut2": "Attribut 2 Beschreibung URI DE",
        "testSchema_Aspekt1_Attribut3": "Attribut 3 Beschreibung DateTime DE",
        "testSchema_Aspekt2_Attribut1": "Attribut 1 Beschreibung Bool DE",
        "testSchema_Aspekt2_Attribut2": "Attribut 2 Beschreibung Number DE",
        "testSchema_Aspekt2_Attribut3": "Attribut 3 Beschreibung Integer DE",
        "testSchema_Aspekt3_Attribut1": "Attribut 1 Beschreibung Enum Single Select DE",
        "testSchema_Aspekt3_Attribut2": "Attribut 2 Beschreibung Enum Multi Select DE",
        "testSchema_Link1": "Link Beschreibung 1",
        "testSchema_Link1_Attribut1": "Attribut 1 Beschreibung URI DE",
        "testSchema_Link1_Attribut2": "Attribut 2 Beschreibung Enum Single Select DE"
      },
      "en": {
        "1": "1",
        "2": "2",
        "3": "3",
        "4": "4",
        "5": "5",
        "a": "v",
        "b": "w",
        "c": "x",
        "d": "y",
        "e": "z",
        "testSchema_Aspekt1_Attribut1": "Attribut 1 Beschreibung Text EN",
        "testSchema_Aspekt1_Attribut2": "Attribut 2 Beschreibung URI EN",
        "testSchema_Aspekt1_Attribut3": "Attribut 3 Beschreibung DateTime EN",
        "testSchema_Aspekt2_Attribut1": "Attribut 1 Beschreibung Bool EN",
        "testSchema_Aspekt2_Attribut2": "Attribut 2 Beschreibung Number EN",
        "testSchema_Aspekt2_Attribut3": "Attribut 3 Beschreibung Integer EN",
        "testSchema_Aspekt3_Attribut1": "Attribut 1 Beschreibung Enum Single Select EN",
        "testSchema_Aspekt3_Attribut2": "Attribut 2 Beschreibung Enum Multi Select EN",
        "testSchema_Link1": "Link Beschreibung 1",
        "testSchema_Link1_Attribut1": "Attribut 1 Beschreibung URI EN",
        "testSchema_Link1_Attribut2": "Attribut 2 Beschreibung Enum Single Select EN"
      }
    },
    "updatedAt": {
      "description": "A timestamp acc. to RFC 3339 specifying when this version of the entity was saved.",
      "type": "string"
    },
    "updatedBy": {
      "description": "The username of the user who last updated this object.",
      "type": "string"
    }
  },
  "required": [
    "name",
    "owner"
  ],
  "title": "testSchema",
  "type": "object"
};
